EXLM 1387 Article Landing Page Layout issue (#783)
* init

* browse rail grid

* browse

* format

* fix_bug

* variables

* overwrite

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -267,7 +267,7 @@ strong {
   --spectrum-red-1100: #930000;
   --spectrum-red-1200: #740000;
   --spectrum-red-1300: #590000;
-  --spectrum-red-1400: #EB1000;
+  --spectrum-red-1400: #eb1000;
   --spectrum-celery-100: #cdfcbf;
   --spectrum-celery-200: #aef69d;
   --spectrum-celery-300: #96ee85;
@@ -333,7 +333,7 @@ strong {
   --spectrum-indigo-1100: #3236a8;
   --spectrum-indigo-1200: #262986;
   --spectrum-indigo-1300: #1b1e64;
-  --spectrum-indigo-1400: #4C50CC;
+  --spectrum-indigo-1400: #4c50cc;
   --spectrum-magenta-100: #ffeaf1;
   --spectrum-magenta-200: #ffdce8;
   --spectrum-magenta-300: #ffcadd;
@@ -521,7 +521,8 @@ body {
   overflow-wrap: break-word;
 }
 
-body[class^=browse-] {
+body[class^=browse-],
+body[class^=article-] {
   /* default background color for browse pages */
   background-color: var(--spectrum-gray-100);
 }
@@ -1313,7 +1314,8 @@ body[class^=browse-] .browse-filters-full-container .browse-filters-pagination, 
 }
 /* browse rail breakpoint same as main hamburger menu (>= 1024px) */
 @media (min-width: 1024px) {
-  body[class^=browse-] > main, body[class^=article-] > main {
+  body[class^=browse-] > main,
+  body[class^=article-] > main {
     display: grid;
     grid-template: "browse-rail main"/256px 1fr;
     /* on pages with rails the max width must be on main */
@@ -1321,11 +1323,9 @@ body[class^=browse-] .browse-filters-full-container .browse-filters-pagination, 
     margin: auto;
     grid-template-rows: auto auto;
   }
-  
   body[class^=article-] > main {
     grid-template: "articles-rail main"/256px 1fr;
   }
-
   main > div.section {
     grid-column: 2;
   }
@@ -1342,6 +1342,14 @@ body[class^=browse-] .browse-filters-full-container .browse-filters-pagination, 
 @media (width >= 1440px) {
   body[class^=browse-] main {
     background-position: -36px 0;
+  }
+  body.article-landing main,
+  body.article-product-landing main {
+    max-width: 1440px;
+  }
+  body.article-landing main > div.section:not(.articles-rail-section),
+  body.article-product-landing main > div.section:not(.articles-rail-section) {
+    padding: 30px 32px;
   }
   body.browse-all main,
   body.browse-product main {
